[package]
name = "paster"
version = "0.1.0"
authors = ["Daniil Zhukov <dmzhukov@outlook.com>"]
edition = "2021"
description = "Easily paste from your terminal to services like Pastebin"
readme = "README.md"
repository = "https://github.com/BugLight/paster"
license = "MIT"
keywords = ["paste", "pastebin"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
